# prr

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt  sample.py
.github/workflows/: ci.yml  review.yml
Plan/: week-1-core-and-model-seam.md  week-2-deterministic-pass-and-filter.md  week-3-pr-mode-and-github-output.md  week-4-runner-and-automation.md  week-5-polish-and-handoff.md
core/: config.py  context.py  detect_static.py  diff.py  eval.py  filter.py  github_out.py  ingest.py  model.py  schema.py
core/eval_cases/: __init__.py  cases.yaml
core/eval_cases/fixtures/: bare_except.py.txt  mutable_default.py.txt  open_no_encoding.py.txt  os_system_injection.py.txt  sql_injection.py.txt  subprocess_shell.py.txt  unsafe_eval.py.txt  zero_division.py.txt
core/prompts/: review.txt
frontends/: action_entry.py  cli.py
tests/: test_action_entry.py  test_cli.py  test_config.py  test_context.py  test_diff.py  test_eval.py  test_filter.py  test_github_out.py  test_ingest.py  test_model.py  test_schema.py  test_static.py
tests/fixtures/: sample.ts
