[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prr"
version = "0.1.0"
description = "A local code-review cat"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "ollama>=0.4",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[project.scripts]
prr = "frontends.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "frontends"]
