[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prr"
version = "0.1.0"
description = "A local code-review cat"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "ollama>=0.4.5",
    "tree-sitter>=0.24",
    "tree-sitter-python>=0.23",
    "rich>=13.0",
    "PyYAML>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]
vllm = ["openai>=1.0"]

[project.scripts]
prr = "frontends.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["core", "frontends"]
